Trip plan labels and overflow fixes

--- a/frontend/src/Components/sass/RouteView.scss
+++ b/frontend/src/Components/sass/RouteView.scss
@@ -10,6 +10,7 @@
         width: 100%;
         height: 35%;
         position: absolute !important;
+        overflow-y:scroll;
         bottom: 0 !important;
         .cards{
             padding-top: 10px;
